--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
 </head>
 
 <body>
-    <!-- <section class="section__header">
-        <div class="header__container">
-            <div class="header__title">We've released new products! Check it out!</div>
-            <div class="header__btn"><a href="">Shop Now</a></div>
-        </div>
-    </section> -->
     <section class="section__hero">
         <div class="hero__container">
             <div class="hero--nav--logo">
@@ -59,7 +53,7 @@
             </div>
             <div class="landing__btn"><a href="">Shop ASAP!</a></div>
         </div>
-        
+
     </section>
     <section class="section__product">
         <div class="product__container">
@@ -79,84 +73,84 @@
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/6-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/stickers-production-1.jpg-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/5-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/6-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/stickers-production-1.jpg-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/5-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/6-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/spacex-Turkish-Blue-DSSX-300x300.jpg" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
                 <div class="product">
                     <div class="product__img"><img src="./image/stickers-production-1.jpg-300x300.png" alt=""></div>
                     <div class="sale__btn">Sale!</div>
                     <div class="view__btn"><a href="">Quick View</a></div>
                     <div class="product__name">React Shirt.Jsx T-shirt</div>
-                    <div class="product__price">380.00৳  – 400.00৳ </div>
+                    <div class="product__price">380.00৳ – 400.00৳ </div>
                 </div>
             </div>
         </div>
@@ -164,7 +158,7 @@
     <section class="section--check--out">
         <div class="check--out--content">
             <div class="check--out--header">Check Out More Products! </div>
-            <div class="check--out--btn"><i class='bx bxs-t-shirt' ></i> More Products!</div>
+            <div class="check--out--btn"><i class='bx bxs-t-shirt'></i> More Products!</div>
             <div class="check--out--footer">What Developer Say?</div>
             <div class="check--out--dash"></div>
         </div>
@@ -172,22 +166,23 @@
     <section class="section--facebook--box">
         <div class="facebook--box--container">
             <div class="facebook__box">
-               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
-               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
-               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
-               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
-               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
-               <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
-               </div>
-               <div class="facebook--box--footer">Check out more awesome review in our Facebook page! </div>
-
+                <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+                <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+                <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+                <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+                <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
+                <div class="facebook--box--review"> <img src="./image/review4.png.webp" alt=""></div>
             </div>
+            <div class="facebook--box--footer">Check out more awesome review in our Facebook page! </div>
+
+        </div>
         </div>
     </section>
     <section class="section--dev--community">
         <div class="dev--community--container">
             <div class="dev--community--header">We're Engage with Developer Community!</div>
-            <div class="dev--community--title">We’re partner and worked with renowned companies, dev teams and developers. We’re the</div>
+            <div class="dev--community--title">We’re partner and worked with renowned companies, dev teams and
+                developers. We’re the</div>
             <div class="dev--community--title2">official merchandise suppliers to these companies.</div>
             <div class="dev--community--gallery">
                 <div class="dev--community--image">
@@ -209,7 +204,7 @@
     <section class="section__elementor">
         <div class="elementor__container">
             <div class="elementor__box">
-                <div class="elementor__icon"><i class='bx bx-code-alt' ></i></div>
+                <div class="elementor__icon"><i class='bx bx-code-alt'></i></div>
                 <div class="elementor__text">
                     <div class="elementor__head">DEVELOPER ORIENTED</div>
                     <div class="elementor__title2">All our product is developer oriented!</div>
@@ -235,38 +230,39 @@
     </section>
     <section class="section__elementor2">
         <div class="elementor2__container">
-            <div class="elementor2__icon"><i class='bx bx-question-mark' ></i></div>
+            <div class="elementor2__icon"><i class='bx bx-question-mark'></i></div>
             <div class="elementor2__text">Didn’t find the design what you look for?</div>
-            <div class="elementor2__form">Submit 📃<a href="">This Form</a>, when the design is available, we will let you know!</div>
+            <div class="elementor2__form">Submit 📃<a href="">This Form</a>, when the design is available, we will let
+                you know!</div>
         </div>
     </section>
     <section class="section--home--footer">
         <div class="home--footer--container">
-           <div class="home--footer--content">
-            <div class="col__one">
-                <div class="col--one--head">DevShop BD</div>
-                <div class="col--one--text">DevShop BD is a Software</div>
-                <div class="col--one--text">Developer Oriented online e-</div>
-                <div class="col--one--text">commerce shop in Bangladesh.</div>
-            </div>
-            <div class="col__two">
-                <div class="col--two--text">T-Shirt Size</div>
-                <div class="col--two--text">Password Reset</div>
-                <div class="col--two--text">cart</div>
-                <div class="col--two--text">Terms & Condition</div>
-                <div class="col--two--text">New Design Order Form</div>
-                <div class="col--two--content">
-                    <div class="content--text"><a href="">We're looking for partner & investor</a></div>
-                    <div class="content--text"><a href="">investor</a></div>
+            <div class="home--footer--content">
+                <div class="col__one">
+                    <div class="col--one--head">DevShop BD</div>
+                    <div class="col--one--text">DevShop BD is a Software</div>
+                    <div class="col--one--text">Developer Oriented online e-</div>
+                    <div class="col--one--text">commerce shop in Bangladesh.</div>
+                </div>
+                <div class="col__two">
+                    <div class="col--two--text">T-Shirt Size</div>
+                    <div class="col--two--text">Password Reset</div>
+                    <div class="col--two--text">cart</div>
+                    <div class="col--two--text">Terms & Condition</div>
+                    <div class="col--two--text">New Design Order Form</div>
+                    <div class="col--two--content">
+                        <div class="content--text"><a href="">We're looking for partner & investor</a></div>
+                        <div class="content--text"><a href="">investor</a></div>
+                    </div>
                 </div>
             </div>
-           </div>
 
-           <div class="social__icons">
-            <div class="footer__icon"><i class='bx bxl-instagram'></i></div>
-            <div class="footer__icon"><i class='bx bxl-facebook-circle' ></i></div>
-            <div class="footer__icon"><i class='bx bxl-twitter' ></i></div>
-           </div>
+            <div class="social__icons">
+                <div class="footer__icon"><i class='bx bxl-instagram'></i></div>
+                <div class="footer__icon"><i class='bx bxl-facebook-circle'></i></div>
+                <div class="footer__icon"><i class='bx bxl-twitter'></i></div>
+            </div>
         </div>
     </section>
 </body>
