--- a/contact.html
+++ b/contact.html
@@ -40,70 +40,72 @@
             </div>
         </div>
     </section>
-<section class="section__getintouch">
-    <div class="get--in--touch--container">
-        <div class="get--in--touch--header">Get In Touch</div>
-        <div class="get--in--touch--title">We’re online based e-commerce company in Bangladesh. We’re also developer minded people like you. If you have any thoughts, Suggestions, Interested</div>
-        <div class="get--in--touch--title">to be a Partner and any business Idea, DO NOT HESITATE TO KNOCK US! </div>
-    </div>
-</section>
-<section class="section__about">
-    <div class="about__container">
-        <div class="about__box">
-            <div class="about__icon"><i class='bx bxs-location-plus'></i></div>
-            <div class="about__title">OUR BUSINESS LOCATION</div>
-            <div class="about__text">88 01842568271</div>
+    <section class="section__getintouch">
+        <div class="get--in--touch--container">
+            <div class="get--in--touch--header">Get In Touch</div>
+            <div class="get--in--touch--title">We’re online based e-commerce company in Bangladesh. We’re also developer
+                minded people like you. If you have any thoughts, Suggestions, Interested</div>
+            <div class="get--in--touch--title">to be a Partner and any business Idea, DO NOT HESITATE TO KNOCK US!
+            </div>
         </div>
-        <div class="about__box">
-            <div class="about__icon"><i class='bx bxs-phone-call' ></i></div>
-            <div class="about__title">CALL US</div>
-            <div class="about__text">Khilkhet, Dhaka - 1229</div>
-        </div>
-        <div class="about__box">
-            <div class="about__icon"><i class='bx bxs-envelope'></i></div>
-            <div class="about__title">EMAIL US</div>
-            <div class="about__text">devshopbd@gmail.com</div>
-        </div>
+    </section>
+    <section class="section__about">
+        <div class="about__container">
+            <div class="about__box">
+                <div class="about__icon"><i class='bx bxs-location-plus'></i></div>
+                <div class="about__title">OUR BUSINESS LOCATION</div>
+                <div class="about__text">88 01842568271</div>
+            </div>
+            <div class="about__box">
+                <div class="about__icon"><i class='bx bxs-phone-call'></i></div>
+                <div class="about__title">CALL US</div>
+                <div class="about__text">Khilkhet, Dhaka - 1229</div>
+            </div>
+            <div class="about__box">
+                <div class="about__icon"><i class='bx bxs-envelope'></i></div>
+                <div class="about__title">EMAIL US</div>
+                <div class="about__text">devshopbd@gmail.com</div>
+            </div>
 
-        <div class="about__dash"></div>
-    </div>
-</section>
-<section class="section__follow">
-    <div class="follow__container">
-        <div class="follow__title">FOLLOW US</div>
-        <div class="follow__icon">
-            <div class="i"><i class='bx bxl-instagram-alt' ></i></div>
-            <div class="i"><i class='bx bxl-facebook-circle' ></i></div>
+            <div class="about__dash"></div>
         </div>
-    </div>
-</section>
+    </section>
+    <section class="section__follow">
+        <div class="follow__container">
+            <div class="follow__title">FOLLOW US</div>
+            <div class="follow__icon">
+                <div class="i"><i class='bx bxl-instagram-alt'></i></div>
+                <div class="i"><i class='bx bxl-facebook-circle'></i></div>
+            </div>
+        </div>
+    </section>
     <section class="section--home--footer">
         <div class="home--footer--container">
-           <div class="home--footer--content">
-            <div class="col__one">
-                <div class="col--one--head">DevShop BD</div>
-                <div class="col--one--text">DevShop BD is a Software</div>
-                <div class="col--one--text">Developer Oriented online e-</div>
-                <div class="col--one--text">commerce shop in Bangladesh.</div>
-            </div>
-            <div class="col__two">
-                <div class="col--two--text">T-Shirt Size</div>
-                <div class="col--two--text">Password Reset</div>
-                <div class="col--two--text">cart</div>
-                <div class="col--two--text">Terms & Condition</div>
-                <div class="col--two--text">New Design Order Form</div>
-                <div class="col--two--content">
-                    <div class="content--text"><a href="">We're looking for partner & investor</a></div>
-                    <div class="content--text"><a href="">investor</a></div>
+            <div class="home--footer--content">
+                <div class="col__one">
+                    <div class="col--one--head">DevShop BD</div>
+                    <div class="col--one--text">DevShop BD is a Software</div>
+                    <div class="col--one--text">Developer Oriented online e-</div>
+                    <div class="col--one--text">commerce shop in Bangladesh.</div>
+                </div>
+                <div class="col__two">
+                    <div class="col--two--text">T-Shirt Size</div>
+                    <div class="col--two--text">Password Reset</div>
+                    <div class="col--two--text">cart</div>
+                    <div class="col--two--text">Terms & Condition</div>
+                    <div class="col--two--text">New Design Order Form</div>
+                    <div class="col--two--content">
+                        <div class="content--text"><a href="">We're looking for partner & investor</a></div>
+                        <div class="content--text"><a href="">investor</a></div>
+                    </div>
                 </div>
             </div>
-           </div>
 
-           <div class="social__icons">
-            <div class="footer__icon"><i class='bx bxl-instagram'></i></div>
-            <div class="footer__icon"><i class='bx bxl-facebook-circle' ></i></div>
-            <div class="footer__icon"><i class='bx bxl-twitter' ></i></div>
-           </div>
+            <div class="social__icons">
+                <div class="footer__icon"><i class='bx bxl-instagram'></i></div>
+                <div class="footer__icon"><i class='bx bxl-facebook-circle'></i></div>
+                <div class="footer__icon"><i class='bx bxl-twitter'></i></div>
+            </div>
         </div>
     </section>
 </body>
